--- a/assets/modules/common/_components.scss
+++ b/assets/modules/common/_components.scss
@@ -8,3 +8,5 @@
 @import "components/topline";
 @import "components/separator";
 @import "components/error-page";
+@import "components/logo";
+@import "components/language-switcher";
