--- a/assets/modules/common/_variables.scss
+++ b/assets/modules/common/_variables.scss
@@ -150,3 +150,14 @@ $space-full: 100%;
  * @section Other Variables
  */
 $zero: 0;
+
+// ====================
+// Sidebar variables
+// ====================
+/**
+ * Sidebar width
+ *
+ * @nuclide
+ * @section Sidebar Variables
+ */
+$sidebar-width: 350px;
