--- a/assets/modules/common/regions/_header.scss
+++ b/assets/modules/common/regions/_header.scss
@@ -7,7 +7,7 @@
  * Header with logo and action buttons.
  *
  * @structure Header
- * @section Common
+ * @section Header
  * @markup
  *  <header class="app-header">
  *    <section class="app-header__layout">
