--- a/templates/regions/footer.html.twig
+++ b/templates/regions/footer.html.twig
@@ -55,9 +55,7 @@
                         </a>
                     {% endfor %}
                 {% endif %}
-
-                <p>{{ 'SEO' }}</p>
-
+                <div class="app-footer__seo">{{ seo }}</div>
                 <div class="app-footer__copyright">
                     <p class="app-footer__copyright--item">{{ '© diftong, 2019'|lower }}</p>
                     <p class="app-footer__copyright--item">{{ '© made by rainlike.com, 2019'|lower }}</p>
